# linebot-rust

./: .env.template  .gitignore  Cargo.toml  Makefile.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: openapi.yml  verify.yml
app/: Cargo.toml
app-adapter/: Cargo.toml
app-adapter/src/: gateway.rs  lib.rs  model.rs  module.rs  repository.rs
app-adapter/src/gateway/: send_message.rs  user_auth.rs
app-adapter/src/model/: event.rs  line_user.rs  line_user_auth.rs  message.rs  messages.rs  primary_user.rs  send_message.rs  talk_room.rs
app-adapter/src/model/message/: event.rs  send_message.rs
app-adapter/src/model/message/send_message/: bot.rs  request.rs  table.rs
app-adapter/src/model/message/send_message/bot/: request.rs  table.rs
app-adapter/src/model/message/send_message/manual/: request.rs  table.rs
app-adapter/src/model/send_message/: bot.rs  manual.rs
app-adapter/src/persistance/: firestore.rs  mysql.rs
app-adapter/src/repository/: event.rs  talk_room.rs  user.rs  user_auth.rs
app-application/: Cargo.toml
app-application/src/: model.rs
app-application/src/model/: event.rs  line_user_auth.rs
app-application/src/usecase/: linebot_webhook_usecase.rs
app-domain/: Cargo.toml
app-domain/src/: gateway.rs  lib.rs  model.rs  repository.rs
app-domain/src/gateway/: send_message.rs  user_auth.rs
app-domain/src/model/: event.rs  line_user.rs  message.rs  primary_user_id.rs  send_message.rs  talk_room.rs  user.rs  user_auth.rs
app-domain/src/model/message/: event.rs  send_message.rs
app-domain/src/repository/: event.rs  talk_room.rs  user.rs  user_auth.rs
app-presentation/: Cargo.toml
app-presentation/src/: context.rs  model.rs  module.rs
app-presentation/src/context/: axum_helper.rs  errors.rs
app-presentation/src/model/: line_webhook.rs
app-presentation/src/routes/: line_webhook.rs
app/src/: adapter.rs  domain.rs  lib.rs  main.rs
app/src/adapter/: factory.rs  module.rs  persistance.rs  repository.rs
app/src/adapter/factory/: event.rs  talk_room.rs
app/src/adapter/model/: event.rs  line_user.rs  line_user_auth.rs  talk_room.rs
app/src/adapter/repository/: event.rs  talk_room.rs  user.rs  user_auth.rs
app/src/application/: usecase.rs
app/src/application/factory/: event.rs
app/src/application/model/: event.rs  line_user_auth.rs
app/src/application/usecase/: linebot_webhook_usecase.rs
app/src/domain/: factory.rs  model.rs  repository.rs
app/src/domain/factory/: event.rs  talk_room.rs
app/src/domain/model/: event.rs  line_user.rs  primary_user_id.rs  talk_room.rs  user.rs  user_auth.rs
app/src/presentation/: module.rs
docker/: docker-compose.local.yml  docker-compose.yml
docker/app/: Dockerfile  Dockerfile.local
docker/db/: Dockerfile  my.cnf
firestore-rs/: Cargo.toml  README.md
firestore-rs/examples/: batch-get-stream.rs  batch-write-simple.rs  batch-write-streaming.rs  caching_memory_collections.rs  caching_persistent_collections.rs  camel-case.rs  crud.rs  database_id_option.rs  dynamic_doc_level_crud.rs  generated-document-id.rs  listen-changes.rs  partition-query.rs  query-with-cursor.rs  query.rs  timestamp.rs  update-precondition.rs
firestore-rs/src/: timestamp_utils.rs
firestore-rs/src/db/: aggregated_query.rs  batch_writer.rs  consistency_selector.rs  create.rs  delete.rs  get.rs  list.rs  listen_changes.rs  precondition_models.rs  query.rs  transaction_models.rs  transform_models.rs  update.rs
firestore-rs/src/firestore_serde/: timestamp_serializers.rs
firestore-rs/tests/: complex-structure-serialize.rs  crud-integration-tests.rs  query-integration-tests.rs
firestore-rs/tests/common/: mod.rs
migrations/: 20230902083226_init.down.sql  20230902083226_init.up.sql  init.sql
src/: adapter.rs  application.rs  main.rs  presentation.rs
src/adapter/: model.rs  module.rs  repository.rs
src/adapter/model/: event.rs  line_user.rs  line_user_auth.rs  message.rs  talk_room.rs
src/adapter/persistance/: mysql.rs
src/adapter/repository/: event.rs  line_user.rs  line_user_auth.rs  talk_room.rs  user_auth.rs
src/application/: domain.rs  line_webhook.rs  model.rs
src/application/domain/: models.rs
src/application/factory/: event.rs
src/application/model/: event.rs  line_auth.rs  line_user.rs  line_user_auth.rs  user.rs  user_event.rs
src/application/usecase/: linebot_webhook_usecase.rs
src/domain/: model.rs  repository.rs
src/domain/model/: event.rs  event_type.rs  line_user.rs  line_user_auth.rs  primary_user_id.rs  talk_room.rs  user.rs  user_auth.rs  user_event.rs  user_message.rs
src/domain/repository/: line_user.rs  line_user_auth.rs  talk_room.rs  user_auth.rs
src/presentation/: linebot_handler.rs  module.rs
src/presentation/context/: axum_helper.rs
src/presentation/model/: line_webhook.rs
src/presentation/routes/: line_webhook.rs
(+11 files in other folders)
