[package]
name = "one-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
hyper = { version = "0.14.26", features = ["full"] }
tokio = { version = "1.28.1", features = ["full"] }
tower = "0.4.13"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
anyhow = "1.0.71"
thiserror = "1.0.40"
validator = { version = "0.16.0", features = ["derive"] }
derive-new = "0.5.9"
ulid = "1.0.0"
async-trait = "0.1.68"
reqwest = "0.11.18"
http-body = "0.4.5"
dotenv = "0.15.0"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "mysql", "chrono"] }
chrono = "0.4.24"
firestore = "0.32.0"
strum_macros = "0.24.3"
strum = { version = "0.24.1", features = ["derive"] }
