[package]
name = "adapter"
version = "0.1.0"
edition = "2021"

[lib]
name = "adapter"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
derive-new = "0.5.9"
domain = { path = "../app-domain" }
firestore = { path = "../firestore-rs" }
reqwest = "0.11.20"
thiserror = "1.0.49"
rust_decimal = "1.32.0"
sqlx = { version = "0.7.2", features = ["runtime-tokio-native-tls", "mysql", "any", "chrono"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
strum_macros = "0.25.2"
strum = { version = "0.25.0", features = ["derive"] }
futures = "0.3.28"
chrono = "0.4.31"
