[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[lib]
name = "domain"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
chrono = "0.4.31"
derive-new = "0.5.9"
mockall = "0.11.4"
rust_decimal = "1.32.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
uuid = { version = "1.4.1", features = ["v4"] }

[dev-dependencies]
fake = {version = "2.8.0", features = ['derive']}
