[package]
name = "presentation"
version = "0.1.0"
edition = "2021"

[lib]
name = "presentation"
path = "src/lib.rs"

[dependencies]
adapter = { path = "../app-adapter" }
axum = "0.6.20"
application = { path = "../app-application" }
domain = { path = "../app-domain" }
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
dotenv = "0.15.0"
reqwest = "0.11.20"
validator = { version = "0.16.1", features = ["derive"] }
async-trait = "0.1.73"
thiserror = "1.0.49"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.2"
