[package]
name = "presentation"
version = "0.1.0"
edition = "2021"

[lib]
name = "presentation"
path = "src/lib.rs"

[dependencies]
adapter = { path = "../app-adapter" }
axum = { version = "0.6.20", features = ["headers"] }
application = { path = "../app-application" }
domain = { path = "../app-domain" }
tokio = { version = "1.32.0", features = ["full", "test-util"] }
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
dotenv = "0.15.0"
reqwest = "0.11.20"
validator = { version = "0.16.1", features = ["derive"] }
async-trait = "0.1.73"
thiserror = "1.0.49"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.2"
hmac = "0.12.1"
sha2 = "0.10.8"
base64 = "0.21.4"
http = "0.2.9"
anyhow = "1.0.75"
derive-new = "0.5.9"

[dev-dependencies]
axum-test = "12.5.0"
chrono = "0.4.31"
fake = {version = "2.8.0", features = ['derive']}
mockall = "0.11.4"

[features]
database-interaction-test = []
